--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,18 @@
-__pycache__
 .git
+.run
 .idea
 .ipynb_checkpoints
 # -------------------------------------------------------------------------------------------------------------------- #
 _.py
+wandb
+__pycache__
+# -------------------------------------------------------------------------------------------------------------------- #
 *.jpg
 *.png
+*.txt
 *.csv
+*.xlsx
+*.json
 *.pt
-*.onnx
 *.trt
-# -------------------------------------------------------------------------------------------------------------------- #
+# -----------------
